# eostrata

./: .env.example  .gitignore  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  README.md  TODO.md  pyproject.toml  render.yaml  schedules.yml
.github/workflows/: ci.yml
docs/: adding-a-source.md
eostrata/: __init__.py  aggregate.py  cache.py  catalog.py  cli.py  config.py  constants.py  ingestion.py  jobs.py  log.py  scheduler.py  server.py  store.py
eostrata/ogc/: __init__.py  ingest.py  processes.py  scheduler_router.py  tiles.py
eostrata/sources/: __init__.py  _template.py  base.py  cams.py  cds.py  chirps.py  sentinel_ndvi.py  tropomi.py  worldpop.py
eostrata/templates/: map.html  scheduler.html
tests/: conftest.py  test_aggregate.py  test_aggregating_reader.py  test_cache.py  test_cams.py  test_catalog.py  test_cds.py  test_cds_netcdf.py  test_chirps.py  test_cli.py  test_config.py  test_log.py  test_ogc_ingest.py  test_ogc_processes.py  test_ogc_tiles.py  test_scheduler.py  test_scheduler_router.py  test_sentinel_ndvi.py  test_server.py  test_sources_base.py  test_sources_download.py  test_store.py  test_tropomi.py  test_worldpop.py
