[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eostrata"
version = "0.1.0"
description = "One tool to fetch, store, aggregate, and serve earth observation layers."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "tqdm>=4.66",
    "rasterio>=1.3",
    "shapely>=2.0",
    "xarray>=2024.2",
    "zarr>=2.17,<3",
    "numpy>=1.26",
    "pystac>=1.10",
    "pydantic-settings>=2.2",
    "typer>=0.12",
    "rich>=13",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.scripts]
eostrata = "eostrata.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["eostrata*"]
